--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/home/page.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/home/page.js", "utils/constants.ts"],
   "exclude": ["node_modules"]
 }
