--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.3",
     "react-toastify": "^9.1.1",
     "swr": "^2.1.0",
     "typescript": "4.9.5"
